user information features added

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="page-header text-center">
-        User Information
-    </h1>
+    <h2 class="page-header text-center">
+        USER INFORMATION
+    </h2>
     {% block content %}
       
     {% endblock content %}
